# gpt2-rs

./: Cargo.toml  README.md
src/: gpt.rs  main.rs  train.rs
